<resources>
    <string name="app_name">Gise\'s Cooking unit converter</string>
    <string name="No1">1</string>
    <string name="No2">2</string>
    <string name="No3">3</string>
    <string name="No4">4</string>
    <string name="No5">5</string>
    <string name="No6">6</string>
    <string name="No7">7</string>
    <string name="No8">8</string>
    <string name="No9">9</string>
    <string name="No0">0</string>
    <string name="DecimalPoint">.</string>
    <string name="Division">/</string>
    <string name="Delete">DEL</string>
    <string name="Clear">CLEAR</string>
    <string name="Convert">CONVERT</string>
    <string name="UnitFromHint">Enter a value...</string>
    <string name="UnitToResult">Result</string>
    <string name="WrongUnitMessage">Wrong unit selected. Please make sure a valid unit has been selected in both dropdown menus.</string>
    <string name="EmptyInutFieldMessage">Value of unit to be converted is empty. Please input a valid value in the input field.</string>
    <string name="ChangeSign">+/-</string>
    <string name="DeleteFull">DELETE</string>
    <string name="Settings">Settings</string>
    <string name ="About">About...</string>
    <string name="Aboutheading">About Gise\'s Cooking unit converter:</string>
    <string name="Welcome">Welcome!!!</string>
    <string name="aboutText1">A.- How to use the app:</string>
    <string name="aboutText2">1.- Select the property to work with from the images on the top. Three
    properties are available: Weight, Volume and Temperature. They are displayed in that order. The property highlighted
    with the blue colour is the selected one.</string>
    <string name="aboutText3">2.- Once the property has been selected, click on the \"From\" and \"To\" scroll menus to select
    the units to convert from and to, respectively. Depending on the property selected, different units will be displayed on the
    scroll menus.</string>
    <string name="aboutText4">3.- Enter a value in the box at the left of the \"Convert\" button, that value will correspond
    to the value of the unit to convert from. Positive and negative decimal numbers are allowed for Temperature property.</string>
    <string name="aboutText5">4.- Click on the \"Convert\" button to get your result on the \"Result\" message box.</string>
    <string name="aboutText6">B.- Tips:</string>
    <string name="aboutText7">1.- If any data to be input is missing, the app will prompt you a message.</string>
    <string name="aboutText8">2.- The \"DEL\"  button will delete the last digit from the input box.</string>
    <string name="aboutText9">3.- The \"CLEAR\"  button will clear the input box and display the hint message and the result
        box will be cleared and will display the \"Result\" text. The \"From\" and \"To\" scroll menus will not
        be cleared and current selection will remain.</string>
    <string name="aboutText10">4.- The \"+/-\" button allows to toggle between positive and negative numbers and
        vice versa. This button can only be used when the Temperature property has been selected, as transforming
        negative magnitudes of weight and volume does not make any sense.Negative sign can be set, even when the
        input box is empty and has no numerical value yet. Negative values are only possible for Celsius and Fahrenheit scales,
        since Kelvin is an absolute scale, which minimum point is zero. Minimum valid values for Celsius and Fahrenheit
        are -273.15°C and -456.67°F, respectively .</string>
    <string name="Preference1Title">Default Property</string>
    <string name="Preference1Description">Select the default property at the app launching.</string>
    <string name="InvalidTemp">Invalid. The value you try to convert from is below the Absolute zero mark (0K, -273.15°C or -456.67°F)</string>
</resources>
